	- Bug #1820: COSS assertion failure t->length == MD5_DIGEST_CHARS
	- Clarify the max-conn=n cache_peer option syntax slightly
	- Bug #1892: COSS segfault on shutdown
	- Windows port: fix undefined ECONNABORTED
	- Make refreshIsCachable handle ETag as a cache validator, not
	  only last-modified
	- in_port_t is not portable, use unsigned short instead
	- Fix fs / auth / snmp dependencies

Changes to squid-2.6.STABLE12 (20 Mar 2007)

	- Assertion error on TRACE

Changes to squid-2.6.STABLE11 (17 Mar 2007)

	- Bug #1915: assertion failed: client_side.c:4055: "buf != NULL ||
	  !conn->body.request"
	- Handle garbage helper responses better in concurrent protocol format
	- Fix kqueue when overflowing the changes queue
	- Make sure the child worker process commits suicide if it could
	  not start up
	- Don't log short responses at debug level 1
	- Fix bswap16 & bwsap32 error on NetBSD
	- Fix collapsed_forwarding for non-GET requests

Changes to squid-2.6.STABLE10 (4 Mar 2007)

	- Upgrade HTTP/0.9 responses to our HTTP version (HTTP/1.0)
	- various diskd bugfixes
	- In the access.log hierarchy field log the unique peer name
	  instead of the host name
	- unlinkdClose() should be called after (not before) storeDirSync()
	- CLEAN_BUF_SZ was defined, but never used anywhere
	- logging HTTP-request size
	- Fix icmp pinger communication on FreeBSD and other not supporing
	  large dgram AF_UNIX sockets
	- Release objects on swapin failure
	- Bug #1787: Objects stuck in cache if origin server clock in future
	- Bug #1420: 302 responses with an Expires header is always cached
	- Primitive support for HTTP/1.1 chunked encoding, working around
	  broken servers
	- Clean up relations between TCP probing and DNS checks of peers with
	  no known addresses.
	- Fix a minor HTML coding error in ftp directory listings with // in
	  the path
	- Bug #1875, #1420. Cleanup of refresh logics when dealing with
	  non-refreshable content
	- Gopher cleanups and bugfixes