@@ -17,6 +17,7 @@ Changes to squid-2.6.STABLE13 (8 May 2007)
 	  only last-modified
 	- in_port_t is not portable, use unsigned short instead
 	- Fix fs / auth / snmp dependencies
+	- Portability: statfs() may reqire #include <sys/statfs.h>
 
 Changes to squid-2.6.STABLE12 (20 Mar 2007)
 
